<resources>
    <string name="amount">Monto:</string>
    <string name="accept">Aceptar</string>
    <string name="please_input_traceno_hint">NÚMERO DE REFERENCIA</string>
    <string name="re_print">REIMPRESIÓN</string>
    <string name="not_any_record">REFERENCIA NO EXISTE</string>
    <string name="label_init_stis">---</string>
    <string name="title_mk">INYECCIÓN MASTER KEY</string>
    <string name="label_mk">INSERTE LA TARJETA</string>
    <string name="cancel">Cancelar</string>
    <string name="busqueda_reciente">Tus búsquedas recientes</string>
    <string name="telefonia_y_Cable">Telefonía y Cable</string>
    <string name="resultado">Resultados</string>
    <string name="moneda_bs">AHORROS</string>
    <string name="moneda_usd">CORRIENTE</string>
    <string name="regresar">REGRESAR</string>
    <string name="hint_pw_mk">Clave MasterKey</string>
    <string name="title_operario">MENÚ OPERARIO</string>
    <string name="hint_pw_operario">Contraseña:</string>
    <string name="remove_card">Retira la tarjeta</string>
    <string name="firme_su_voucher">Firme su Voucher</string>
    <string name="msg_signature">Voucher con campos para firma manual</string>
    <string name="cedula">CÉDULA:</string>
    <string name="telefono">TELÉFONO:</string>
    <string name="clear_pad">LIMPIAR FIRMA</string>
    <string name="save_signature">IMPRIMIR VOUCHER FIRMADO DIGITALMENTE</string>
    <string name="cancel_signature">IMPRIMIR VOUCHER PARA FIRMAR</string>
    <string name="save">Guardar</string>
    <string name="android_setting">Android System Settings</string>
    <string name="app_exit">Click again to exit app</string>
    <string name="app_init">App is initializing</string>
    <string name="app_name">BCP</string>
    <string name="app_setting">Configuración</string>
    <string name="appstore_not_install">Please install Rong Appstore</string>
    <string name="auth_code">Código Autorizacion:</string>
    <string name="back_camera">Back Camera</string>
    <string name="batch_no">BatchNO</string>
    <string name="batch_num">Lote:</string>
    <string name="btn_pw_mk">Ingresar</string>
    <string name="camera_location_choice">Camera choice</string>
    <string name="card_num">Tarjeta:</string>
    <string name="cash">Sales</string>
    <string name="cell">DIGITE No. CELULAR</string>
    <string name="classical_launcher">Classical</string>
    <string name="clear_data">Clear data</string>
    <string name="close_app_debug_output">Log output Off</string>
    <string name="conf_msg_pwoperario">ACCESO PERMITIDO</string>
    <string name="confirm_card_no">CONFIRME NÚMERO DE TARJETA</string>
    <string name="customers_or_logo">Customers or LOGOs</string>
    <string name="data_null">Debe llenar todos los datos</string>
    <string name="des">DES</string>
    <string name="dialog_title_listapp">SELECCIONE APLICACIÓN</string>
    <string name="err_msg_pwmk">Debe ingresar una clave</string>
    <string name="err_msg_pwoperario">CÓDIGO DE ACCESO NO COINCIDE</string>
    <string name="errlog_list">Errlog list</string>
    <string name="exit">Exit</string>
    <string name="feedback_advice">Feedback and advice</string>
    <string name="firm_no">FirmCode</string>
    <string name="front_camera">Front camera</string>
    <string name="gm">GM</string>
    <string name="ingrese_dato">Ingrese Datos</string>
    <string name="input_err_reinput">Enter error,please enter again</string>
    <string name="insert_card_bootom">Insert card form POS bottom</string>
    <string name="intentos_de_conex">INTENTOS DE CONEXIÓN</string>
    <string name="intranet_network_ip">Intranet IP</string>
    <string name="intranet_network_port">Intranet Port</string>
    <string name="ip_invalid">Invalid ip</string>
    <string name="is_completed">Completed</string>
    <string name="label_card">DESLICE/INSERTE TARJETA</string>
    <string name="label_init">INICIALICE</string>
    <string name="label_init_process">PROCESANDO INICIALIZACIÓN</string>
    <string name="launcher_style">Launcher Styles</string>
    <string name="len_err">Len is error</string>
    <string name="local_present">Local Presentation</string>
    <string name="longitud_invalida">Longitud mínima invalida</string>
    <string name="management">Management</string>
    <string name="merchant_id">MERCHANT ID</string>
    <string name="merchant_name">Merchant Name</string>
    <string name="modify_maintain_pass">Modify maintain pwd</string>
    <string name="msg_re_print">Reimprimiendo...</string>
    <string name="multimoneda">MULTIMONEDA</string>
    <string name="new_pass">NewPwd</string>
    <string name="next">Next</string>
    <string name="no_any_data">No existe en este lote</string>
    <string name="old_pass">OldPwd</string>
    <string name="online_or_local">OnlineTrans or LocalPresentation</string>
    <string name="online_trans">Online Trans</string>
    <string name="op_fail">Operation fail</string>
    <string name="open_app_debug_output">Log output On</string>
    <string name="open_encrypt_track">Track encrypted On</string>
    <string name="open_public_network">Public network On</string>
    <string name="open_scan_beep">Beep prompt On</string>
    <string name="open_shine_light">Light On</string>
    <string name="original_pass_err">Original pwd is error</string>
    <string name="others">Others</string>
    <string name="pat_card_above">Tap card above POS top</string>
    <string name="pay_code">PayCode:</string>
    <string name="please_chose_key_type">Please chose key system</string>
    <string name="please_input_amount">"INGRESE MONTO "</string>
    <string name="please_input_auth_code">Please enter original AuthCode</string>
    <string name="please_input_data_time">Please enter original TransDate</string>
    <string name="please_input_master_pass">Please enter master pwd</string>
    <string name="please_input_masterkey_data">Please enter master key data</string>
    <string name="please_input_masterkey_index">Please enter master key index</string>
    <string name="please_input_reference">Plesae enter original Reference</string>
    <string name="please_input_trace_no">INGRESE NÚMERO DE REFERENCIA</string>
    <string name="preauth">Pre-auths</string>
    <string name="pref_key">APPINFO</string>
    <string name="print_num_choice">Print counts choice</string>
    <string name="printing">IMPRIMIENDO..</string>
    <string name="prompt">Prompt</string>
    <string name="public_network_ip">"IP HOST "</string>
    <string name="public_network_port">PUERTO HOST</string>
    <string name="pw_operario">028510</string>
    <string name="qr_bar_code">Coloca un código QR en el interior del rectángulo para escanear</string>
    <string name="query">QueryPrint</string>
    <string name="restore">Restore</string>
    <string name="reversal_counts_choice">Reversal counts choice</string>
    <string name="salevoid">Void</string>
    <string name="save_success">Configuración almacenada exitosamente</string>
    <string name="scan">Scan</string>
    <string name="select">Seleccione</string>
    <string name="send_email">Send email</string>
    <string name="send_email_hint">Please enter your valuable advice</string>
    <string name="send_fail">Send fail and try later</string>
    <string name="send_success">We have received your valuable advice and we will work harder</string>
    <string name="sending_content">Sending feedback and advice</string>
    <string name="simple_launcher">Simple</string>
    <string name="stay_tuned">Stay tuned</string>
    <string name="submit">Submit</string>
    <string name="swipe_card_right">Swipe card from POS right</string>
    <string name="terminal_id">TERMINAL ID</string>
    <string name="timeout_resp">TIEMPO DE RESPUESTA</string>
    <string name="tip">Propina:</string>
    <string name="title_conf_param_ini">CONFIGURACIÓN</string>
    <string name="title_cuotas">DIGITE CUOTAS</string>
    <string name="title_last4">ÚLTIMOS 4 DÍGITOS</string>
    <string name="title_menu_tipo_moneda">TIPO DE MONEDA</string>
    <string name="title_nii">NII</string>
    <string name="title_pw_mk">Por favor, Ingrese Clave MasterKey</string>
    <string name="tittle_dato_actual">ACTUAL</string>
    <string name="tittle_dato_nuevo">NUEVO</string>
    <string name="total_amount">TOTAL</string>
    <string name="tpdu_no">TPDU</string>
    <string name="trace_no">TraceNo</string>
    <string name="trans_contactless_pboc">Whether force contactless PBOC</string>
    <string name="trans_date">Fecha y Hora:</string>
    <string name="trans_master_pass_para">Modify master pwd</string>
    <string name="trans_merchant_para">Información Comercio</string>
    <string name="trans_result">INFORMACIÓN</string>
    <string name="trans_scan_para">ScanParas</string>
    <string name="trans_sys_para">Parámetros Batch</string>
    <string name="trans_type">Transacción:</string>
    <string name="trans_void_card">Whether Sale-Void needs card</string>
    <string name="trans_void_pass">Whether Sale-Void needs pwd</string>
    <string name="tv_dato_actual">Dato actual</string>
    <string name="unknown_err">Unknown error</string>
    <string name="void_amount">Monto:</string>
    <string name="void_auth_code">Código Autorización:</string>
    <string name="void_batch_no">Lote:</string>
    <string name="void_card_no">Tarjeta:</string>
    <string name="void_original_trans">Transaccion:</string>
    <string name="void_pay_code">Pay Code:</string>
    <string name="void_time">Fecha y Hora:</string>
    <string name="void_tip">Propina:</string>
    <string name="void_trace_no">Referencia:</string>
    <string name="voucher_num">Referencia:</string>
    <string name="wait_connect_time">"TIEMPO DE ESPERA "</string>
    <string name="wait_user_time">Waiting user to response(s)</string>
    <string name="verificando">Verificando</string>
    <string name="listo">¡Listo!</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="_00">00</string>
    <string name="saludo">¡Hola socio!</string>
    <string name="saludosupervisor">¡Hola supervisor!</string>
    <string name="msgctasol">de cuenta Ahorros Soles</string>
    <string name="continuar">Continuar</string>
    <string name="quesCompro">¿Imprimir comprobante?</string>
    <string name="yes">Sí</string>
    <string name="not">No</string>
    <string name="changeKey">Cambiar clave</string>
    <string name="amountRet">Monto retirado</string>
    <string name="accountExample">193 196 97838 004</string>
    <string name="msgWarning">Verifica los datos y Reciba el\n Dinero antes de confirmar</string>
    <string name="confirm">Confirmar</string>
    <string name="comision">Comisión Giro:</string>
    <string name="accountSol">Cuenta Ahorros Soles</string>
    <string name="owner">Nombre:</string>
    <string name="daysRes">¡Recuerda!</string>
    <string name="changePass">La clave caducará\nen 3 días</string>
    <string name="forget">Olvidé mi clave</string>
    <string name="sign">S/</string>
    <string name="msgAccountClientMenc">Menciónale al cliente:</string>
    <string name="msgAccountClientRet">El monto ingresado</string>
    <string name="msgAccountClientBtn">Entendido</string>
    <string name="msgAccountClientBtnExit">Salir</string>
    <string name="network">NETWORK LOCATION</string>
    <string name="longitud">Longitud</string>
    <string name="latitud">Latitud</string>
    <string name="distancia"> La distancia es: </string>
    <string name="resumen">RESUMEN</string>
    <string name="calcular">CALCULAR</string>
    <string name="maxPermitido">supera el máximo permitido</string>
    <string name="thisTransaction">en esta transacción</string>
</resources>