<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#65000000"
    android:clickable="false">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:background="@drawable/background_white_msg_account"
        android:layout_margin="20dp"
        android:paddingTop="22dp"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"
        android:paddingBottom="20dp">

        <TextView
            android:id="@+id/tittleMsgScreen"
            android:layout_width="261dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="22dp"
            android:fontFamily="@font/flexo_medium"
            android:gravity="center"
            android:text="@string/msgAccountClientMenc"
            android:textColor="#527094"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/msg1Screen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/msgAccountClientRet"
            android:fontFamily="@font/flexo_medium"
            android:layout_gravity="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/msg2Screen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/maxPermitido"
            android:fontFamily="@font/flexo_bold"
            android:layout_gravity="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            android:textAllCaps="false"/>

        <TextView
            android:id="@+id/msg3Screen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thisTransaction"
            android:fontFamily="@font/flexo_medium"
            android:layout_gravity="center"
            android:textColor="@color/colorPrimaryDark"
            android:layout_marginBottom="30dp"
            android:textSize="18sp" />

        <Button
            android:id="@+id/continuarMsg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/zxing_transparent"
            android:fontFamily="@font/flexo_bold"
            android:text="@string/continuar"
            android:textColor="@color/orange"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:stateListAnimator="@null"
            android:visibility="gone"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/entendidoMsg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/zxing_transparent"
            android:fontFamily="@font/flexo_bold"
            android:text="@string/msgAccountClientBtn"
            android:textColor="@color/orange"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:stateListAnimator="@null"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/exitMsg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/zxing_transparent"
            android:fontFamily="@font/flexo_bold"
            android:text="@string/msgAccountClientBtnExit"
            android:textColor="@color/orange"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:stateListAnimator="@null"
            android:textAllCaps="false"
            android:visibility="gone"/>

    </LinearLayout>

</RelativeLayout>