<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#86000000">

    <LinearLayout
        android:layout_width="280dp"
        android:layout_height="220dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="vertical"
        android:background="@drawable/background_white_msg_account">

        <TextView
            android:id="@+id/msgDaysPwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/color_text_gray"
            android:fontFamily="@font/flexo_medium"
            android:text="@string/daysRes"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/msgPwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/flexo_bold"
            android:textColor="@color/blue_dark"
            android:textSize="20sp"
            android:text="@string/changePass"
            android:gravity="center"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/changePwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:textColor="@color/color_text_orange"
                android:fontFamily="@font/flexo_bold"
                android:text="@string/changeKey"
                android:textSize="16sp"
                android:layout_marginEnd="25dp"
                android:visibility="visible"
                android:textAllCaps="false"/>

            <Button

                android:id="@+id/ignore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:textColor="@color/color_text_orange"
                android:fontFamily="@font/flexo_bold"
                android:text="@string/forget"
                android:textSize="16sp"
                android:textAllCaps="false"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>