<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/ic_background_dark">

    <include
        android:id="@+id/linearLogoMsg"
        layout="@layout/layout_logo_mensaje"
        android:visibility="gone"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/linearImprimir">

        <LinearLayout
            android:id="@+id/linearContenido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_centerInParent="true"
            android:visibility="visible"
            tools:ignore="UselessParent">

            <TextView
                android:id="@+id/msgInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/flexo_bold"
                android:layout_marginBottom="@dimen/dp_10"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:text="@string/amountRet"/>

            <LinearLayout
                android:id="@+id/linearMonto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/signoSol"
                    android:layout_width="wrap_content"
                    android:layout_height="31dp"
                    android:fontFamily="@font/flexo_medium"
                    android:text="@string/sign"
                    android:textColor="@color/white"
                    android:layout_marginTop="-10dp"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/msgDetalleUno"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/flexo_medium"
                    android:textSize="60sp"
                    android:text="500.00"/>

            </LinearLayout>

            <TextView
                android:id="@+id/msgDetalleDos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/msgctasol"
                android:textColor="@color/white"
                android:layout_marginTop="@dimen/dp_10"
                android:gravity="center"
                android:textSize="18sp"
                android:fontFamily="@font/flexo_medium"/>

        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linearImprimir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:background="@drawable/background_linearlayout_white"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            android:id="@+id/msgImpresion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/flexo_medium"
            android:text="@string/quesCompro"
            android:textColor="@color/color_text"
            android:textSize="20sp" />

        <Button
            android:id="@+id/result_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/background_btn_orange"
            android:fontFamily="@font/flexo_bold"
            android:text="@string/yes"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="21sp" />

        <Button
            android:id="@+id/result_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/background_btn_white"
            android:fontFamily="@font/flexo_bold"
            android:text="@string/not"
            android:textAllCaps="false"
            android:textColor="@color/color_text_gray"
            android:textSize="21sp" />

    </LinearLayout>

</RelativeLayout>